--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "dino-blog",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://drgithub.github.io/",
   "dependencies": {
     "@types/jest": "23.3.13",
     "@types/node": "10.12.21",
     "@types/react": "16.8.1",
     "@types/react-dom": "16.0.11",
+    "gh-pages": "^2.0.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.3",
@@ -16,8 +18,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "homepage" : "http://drgithub.github.io/"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
