--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "@types/jest": "23.3.13",
     "@types/node": "10.12.21",
     "@types/react-dom": "16.0.11",
+    "@types/react-router": "^4.4.3",
+    "@types/react-router-dom": "^4.3.1",
     "gh-pages": "^2.0.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
     "typescript": "3.3.1"
   },
@@ -32,6 +36,7 @@
   ],
   "devDependencies": {
     "@types/react": "^16.8.1",
-    "terser": "^3.14.1"
+    "terser": "^3.14.1",
+    "fsevents": "*"
   }
 }
