--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "homepage": "http://drgithub.github.io/",
   "dependencies": {
+    "@types/immutable": "^3.8.7",
     "@types/jest": "23.3.13",
     "@types/node": "10.12.21",
     "@types/react-dom": "16.0.11",
     "@types/react-router": "^4.4.3",
     "@types/react-router-dom": "^4.3.1",
     "gh-pages": "^2.0.1",
+    "immutable": "^4.0.0-rc.12",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-router": "^4.3.1",
