--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "typescript": "3.3.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set PORT=3006 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "predeploy": "npm run build",
