--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "@types/react-router-dom": "^4.3.1",
     "gh-pages": "^2.0.1",
     "immutable": "^4.0.0-rc.12",
+    "node-sass": "^4.11.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.3",
+    "react-scripts": "^2.1.5",
     "typescript": "3.3.1"
   },
   "scripts": {
